# patrimoine-tracker

./: .gitignore  CLAUDE.md  deploy.sh  docker-compose.yml
asset-manager-backend/: .env.example  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_NOTICE.md  alembic.ini  db_stats.sh  docker-compose.yml  pyproject.toml
asset-manager-backend/.claude/: settings.local.json
asset-manager-backend/alembic/: env.py
asset-manager-backend/alembic/versions/: 001_initial.py  002_enablebanking_sessions.py
asset-manager-backend/app/: config.py  database.py  main.py
asset-manager-backend/app/api/: deps.py  router.py
asset-manager-backend/app/api/routes/: accounts.py  enablebanking.py  history.py  metrics.py  overview.py
asset-manager-backend/app/connectors/: base.py  registry.py
asset-manager-backend/app/connectors/binance/: client.py  connector.py  normalizer.py
asset-manager-backend/app/models/: __init__.py  account.py  enablebanking_session.py  snapshot.py  sync_log.py
asset-manager-backend/app/scheduler/: jobs.py
asset-manager-backend/app/schemas/: account.py  snapshot.py
asset-manager-backend/app/services/: analytics_service.py  snapshot_service.py  sync_service.py
asset-manager-backend/docs/: powens-add-account.md
asset-manager-backend/scripts/: enablebanking-connect.py  powens-connect.sh  powens-list.sh
asset-manager-backend/tests/: conftest.py
asset-manager-backend/tests/connectors/: test_binance.py  test_enablebanking.py  test_powens.py
asset-manager-backend/tests/services/: test_sync_service.py
asset-manager-frontend-react/: Dockerfile  index.html  (+4 more)
(+34 files in other folders)
